# cola-coder

./: .gitignore  .pipeline_state_tiny.json  CLAUDE.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements.txt  tokenizer.json
configs/: 4080_max.yaml  features.yaml  large.yaml  medium.yaml  pipeline.yaml  reasoning.yaml  small.yaml  specialists.yaml  storage.yaml  tiny.yaml
docs/: 01_python_for_ts_devs.md  02_how_transformers_work.md  03_training_pipeline.md  04_reasoning_experiments.md  05_hardware_guide.md
plans/: 03-github-scraper.plan.md  04-data-filter-plugins.plan.md
research/: 01-ast-aware-training.plan.md  02-test-driven-data-curation.plan.md  03-dependency-graph-training.plan.md  04-execution-feedback-pretraining.plan.md  05-synthetic-curriculum.plan.md  06-type-system-as-reward.plan.md
scripts/: average_checkpoints.py  benchmark.py  checkpoint_diff.py  checkpoint_info.py  combine_datasets.py  compare_checkpoints.py  compare_models.py  data_stats.py  env_check.py  evaluate.py  export_model.py  find_lr.py  generate.py  generate_instructions.py  generate_router_data.py  inference_benchmark.py  menu.py  migrate_storage.py  model_card.py  nano_benchmark.py  prepare_data.py  prepare_data_interactive.py  prepare_fim_data.py  project_health.py  quality_report.py  regression_test.py  run.py  run_eval_suite.py  run_pipeline.py  score_repos.py  scrape_github.py  serve.py  smoke_test.py  test_type_reward.py  tokenizer_health.py  train.py  train_quality_classifier.py  train_reasoning.py  train_router.py  train_tokenizer.py  (+5 more)
tests/: test_attention.py  (+121 more)
(+341 files in other folders)
